--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   path: ^1.8.3
   window_manager: ^0.4.3
   scrollable_positioned_list: ^0.3.8
+  flutter_fullscreen: ^1.0.2
 
 dev_dependencies:
   flutter_test:
