--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   path: ^1.8.3
   window_manager: ^0.5.0
   scrollable_positioned_list: ^0.3.8
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
