--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,8 @@
 analyzer:
   errors:
     avoid_print: ignore
+    deprecated_member_use: ignore
+    deprecated_member_use: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
