--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   window_manager: ^0.5.0
   scrollable_positioned_list: ^0.3.8
   shared_preferences: ^2.5.3
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
@@ -42,6 +43,7 @@ flutter:
   uses-material-design: true
   assets:
     - lib/asset/fonts/
+    - lib/asset/icon/
   fonts:
     - family: MiSans-Bold
       fonts:
