--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: music_player
-description: "Material You Music Player - Local music player with Coriander Player design"
+description: "Material You Music Player - Local music player with wonderful design"
 publish_to: 'none'
-version: 1.0.0+1
+version: 1.0.1+1
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
