修复并更新字体设置

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,3 +50,11 @@ flutter:
       fonts:
         - asset: lib/asset/fonts/MiSans-Bold.ttf
           weight: 700
+    - family: 苹方
+      fonts:
+        - asset: lib/asset/fonts/苹方字体.ttf
+          weight: 700
+    - family: HarmonyOS-Sans
+      fonts:
+        - asset: lib/asset/fonts/HarmonyOS_Sans_SC_Bold.ttf
+          weight: 700
