--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   shared_preferences: any
   flutter_launcher_icons: any
   url_launcher: any
+  desktop_multi_window: any
 
 dev_dependencies:
   flutter_test:
