--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,13 +10,15 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: any
-    # Audio related
+  # Audio related
   audioplayers: any
   file_picker: any
   path_provider: any  # Metadata reading
   audio_metadata_reader: any
   flutter_taggy: any # Added for reading embedded lyrics
   uuid: any # Added uuid package
+  win32: ^5.14.0 # For Windows file creation time
+  ffi: any # Required for win32
 
   # State management
   provider: any
