--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   audio_metadata_reader: any
   flutter_taggy: any # Added for reading embedded lyrics
   uuid: any # Added uuid package
-  win32: ^5.14.0 # For Windows file creation time
+  win32: any # For Windows file creation time
   ffi: any # Required for win32
 
   # State management
