优化音乐播放以及EQ均衡器

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,15 +10,14 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: any
-  # Audio related
-  audioplayers: any
+  # Audio related - 使用BASS FFI替代audioplayers
   file_picker: any
   path_provider: any  # Metadata reading
   audio_metadata_reader: any
   flutter_taggy: any # Added for reading embedded lyrics
   uuid: any # Added uuid package
   win32: any # For Windows file creation time
-  ffi: any # Required for win32
+  ffi: any # Required for win32 and BASS FFI
 
   # State management
   provider: any
